# sentrel

./: .env  .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
dashboards/: README.md  developer-debug.ndjson  error-overview.ndjson  project-metrics.ndjson  user-impact.ndjson
docker/: .env  Dockerfile  docker-compose.yml
scripts/: import_dashboards.py  setup_index.py
sentrel.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/: __init__.py  config.py  main.py
src/etl/: enricher.py  pipeline.py  transformer.py
src/opensearch/: __init__.py  client.py  indexer.py  mappings.py
src/receiver/: auth.py  batcher.py  endpoints.py  event_parser.py
src/tasks/: __init__.py  celery_tasks.py
test_app/: Dockerfile  README.md  docker-compose.yml  error_generator.py  requirements.txt  simple_test.py  web_error_generator.py
tests/: __init__.py  test_auth.py  test_config.py  test_endpoints.py  test_envelope_parser.py
